--- a/sites/all/themes/audible/sass/components/_mediaelement-audio-skin.scss
+++ b/sites/all/themes/audible/sass/components/_mediaelement-audio-skin.scss
@@ -7,7 +7,7 @@
 /*
  § Track navigation
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.mediaelement-audio {
+.mediaplayer {
   position: relative;
   height: 163px;
   background: #fff;
@@ -106,7 +106,7 @@
 /*
  § Audio title
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.mediaelement-audio {
+.mediaplayer {
 
   .audio-title {
     font-family: 'hill bold', sans-serif;
