Added a new content-type for "Basic pages"

--- a/sites/all/themes/audible/sass/audible.misc.scss
+++ b/sites/all/themes/audible/sass/audible.misc.scss
@@ -1,4 +1,6 @@
 // It may just be a temp fix?.
-#page-title {
-  display: none;
+.node-type-generic-page {
+  #page-title {
+    display: none;
+  }
 }
