--- a/sites/all/themes/audible/sass/audible.scss
+++ b/sites/all/themes/audible/sass/audible.scss
@@ -58,6 +58,6 @@
 @import "pages/search-results";
 @import "pages/number-pad-search-results";
 @import "pages/number-search";
-@import "pages/generic-page";
+@import "pages/basic-page";
 @import "pages/all-routes";
 @import "pages/all-artworks";
