Corrected styling-scope of original page title.

--- a/sites/all/themes/audible/css/audible.misc.css
+++ b/sites/all/themes/audible/css/audible.misc.css
@@ -1,1 +1,3 @@
-.node-type-generic-page #page-title { display: none; }
+#page-title { display: none; }
+
+.node-type-page #page-title { display: block; }
