Added styling for Number-Pad search results

--- a/sites/all/themes/audible/sass/pages/_number-pad-search-results.scss
+++ b/sites/all/themes/audible/sass/pages/_number-pad-search-results.scss
@@ -1,6 +1,6 @@
 // Number pad search results
 
-.page-number-pad-search-results {
+.page-number-search {
 
   // Extending compact-list styles to view rows
   .view-content {
