--- a/sites/all/themes/audible/sass/components/_search-panel.scss
+++ b/sites/all/themes/audible/sass/components/_search-panel.scss
@@ -1,4 +1,4 @@
-.search-panel {
+.page-search .view-id-string_search .view-filters {
   @extend .info-panel;
   padding-bottom: 13px;
 
@@ -9,18 +9,18 @@
     background: #fff;
     position: relative;
 
-    input[type="text"] {
+    .form-type-textfield input {
       background: #fff;
       width: 100%;
       height: 30px;
       padding: 5px 8px;
 
       &:focus {
-        outline: none;           
+        outline: none;
       }
     }
 
-    input[type="submit"] {
+    .views-submit-button input {
       @extend .icon;
       width: 34px;
       height: 30px;
@@ -33,7 +33,7 @@
       padding-left: 1px;
 
       &:focus {
-        outline: none;           
+        outline: none;
       }
     }
   }
