--- a/sites/all/themes/audible/sass/audible.scss
+++ b/sites/all/themes/audible/sass/audible.scss
@@ -55,6 +55,7 @@
 @import "pages/choose-lang";
 @import "pages/home";
 @import "pages/route";
+@import "pages/audio";
 @import "pages/search-results";
 @import "pages/number-pad-search-results";
 @import "pages/number-search";
