--- a/sites/all/themes/audible/sass/pages/_search-results.scss
+++ b/sites/all/themes/audible/sass/pages/_search-results.scss
@@ -2,6 +2,14 @@
 
 .page-search {
 
+  .category {
+    @extend .heading--medium;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid $gray;
+    margin-bottom: 0;
+  }
+
   // Extending compact-list styles to view rows
   .view-content {
     @extend .compact-list--search;
