Added "SASS placeholder" compatibility for "compact lists"

--- a/sites/all/themes/audible/sass/components/_compact-list.scss
+++ b/sites/all/themes/audible/sass/components/_compact-list.scss
@@ -8,6 +8,7 @@
 /*
  § List item
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+%compact-list__item,
 .compact-list__item {
   border-bottom: 1px solid $gray;
   position: relative;
