Convert node-teasers/views lists to <a> elements instead of using a "on click". This is done due to touch-compatibility

--- a/sites/all/themes/audible/sass/components/_compact-list.scss
+++ b/sites/all/themes/audible/sass/components/_compact-list.scss
@@ -12,8 +12,9 @@
 .compact-list__item {
   border-bottom: 1px solid $gray;
   position: relative;
-  height: 80px;
   cursor: pointer;
+  height: 80px;
+  display: block;
   text-align: left;
 
   &:hover,
