Added support for videos on sounds

--- a/sites/all/themes/audible/sass/pages/_audio.scss
+++ b/sites/all/themes/audible/sass/pages/_audio.scss
@@ -3,4 +3,14 @@
     .node-teaser {
     @extend %compact-list__item;
   }
+
+  // Adjusting the collapsible video-field.
+  .videos {
+    &.open {
+      padding-bottom: 1px;
+    }
+    .player {
+      margin: 15px;
+    }
+  }
 }
