--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -673,10 +673,10 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 .number-pad .help a i { position: relative; top: .1em; }
 
 .foldout { text-align: center; background: #fff; -webkit-box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.22); -moz-box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.22); box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, 0.22); /*h2*/ }
-.foldout .foldout-toggle { font-family: 'hill regular', sans-serif; margin-bottom: 0; padding: 9px 12px 16px; border-bottom: 1px solid #f2f2f4; }
+.foldout .foldout-toggle { font-family: 'hill regular', sans-serif; margin-bottom: 0; padding-top: 12px; border-bottom: 1px solid #f2f2f4; }
 .foldout .foldout-toggle:hover, .foldout .foldout-toggle:focus { cursor: pointer; }
 .foldout .foldout-toggle:active { background: #f2f2f4; }
-.foldout .foldout-toggle > i { font-size: 24px; position: relative; top: .225em; }
+.foldout .foldout-toggle > i { font-size: 24px; position: relative; top: 0; }
 
 .foldout-content { position: absolute; display: none; }
 
@@ -755,6 +755,9 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 .front #content .info-panel, .front #content .info-panel--expandable, .front #content .page-search .search-panel, .page-search .front #content .search-panel { display: none; }
 .front #content .menu { *zoom: 1; }
 .front #content .menu:after { content: ""; display: table; clear: both; }
+
+.node-audio .videos.open { padding-bottom: 1px; }
+.node-audio .videos .player { margin: 15px; }
 
 .page-search .category { padding-top: 10px; padding-bottom: 5px; border-bottom: 1px solid #e6e6e8; margin-bottom: 0; }
 
