--- a/sites/all/themes/audible/sass/components/_foldout.scss
+++ b/sites/all/themes/audible/sass/components/_foldout.scss
@@ -8,7 +8,7 @@
     @extend .heading--small;
     font-family: 'hill regular', sans-serif;
     margin-bottom: 0;
-    padding: 9px 12px 16px;
+    padding-top: 12px;
     border-bottom: 1px solid $gray-lighter;
 
     &:hover,
@@ -24,7 +24,7 @@
     > i {
       font-size: 24px;
       position: relative;
-      top: .225em;
+      top: 0;
     }
   }
 
