--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -156,9 +156,9 @@ a:hover { text-decoration: none; }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*\ § Heading
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.heading, .heading--extra-small, .copy h3, .info-panel .content h3, .info-panel--expandable .content h3, .page-search .search-panel .content h3, .copy h4, .info-panel .content h4, .info-panel--expandable .content h4, .page-search .search-panel .content h4, .tile a, .tile--large a, .front #content .menu li.tile--large a, .front #content .menu li a, .heading--small, .copy h2, .info-panel .content h2, .info-panel--expandable .content h2, .page-search .search-panel .content h2, .delta-toggle-menu, .node-audio .node-teaser h2, .compact-list__item h2, .compact-list--search .compact-list__item h2, .page-search .view-content .compact-list__item h2, .node-type-generic-page .view-artworks .view-content .compact-list__item h2, .node-type-route .node-audio.view-mode-route_context h2, .node-type-route .node-audio.node-teaser h2, .page-search .view-content .views-row h2, .page-number-search .view-content .views-row h2, .node-type-generic-page .view-routes .view-content .views-row h2, .node-type-generic-page .view-artworks .view-content .views-row h2, .node-type-piece .view-artwork .view-content .views-row h2, .foldout .foldout-toggle, .heading--medium, .copy h1, .info-panel .content h1, .info-panel--expandable .content h1, .page-search .search-panel .content h1, .info-panel > h2, .info-panel--expandable > h2, .page-search .search-panel > h2, .page-search .category, .heading--large, .button--l, .node-type-page #page-title, .heading--extra-large, .heading--bordered { font-family: "hill bold", sans-serif; font-size: 1em; font-weight: normal; line-height: 1.305; margin-bottom: .5em; color: #111111; letter-spacing: -.005em; }
+.heading, .heading--extra-small, .copy h3, .info-panel .content h3, .info-panel--expandable .content h3, .page-search .search-panel .content h3, .copy h4, .info-panel .content h4, .info-panel--expandable .content h4, .page-search .search-panel .content h4, .front .menu-tile a, .front .menu-tile a span, .heading--small, .copy h2, .info-panel .content h2, .info-panel--expandable .content h2, .page-search .search-panel .content h2, .delta-toggle-menu, .front .menu-tile.tile--large a, .node-audio .node-teaser h2, .compact-list__item h2, .compact-list--search .compact-list__item h2, .page-search .view-content .compact-list__item h2, .node-type-generic-page .view-artworks .view-content .compact-list__item h2, .node-type-route .node-audio.view-mode-route_context h2, .node-type-route .node-audio.node-teaser h2, .page-search .view-content .views-row h2, .page-number-search .view-content .views-row h2, .node-type-generic-page .view-routes .view-content .views-row h2, .node-type-generic-page .view-artworks .view-content .views-row h2, .node-type-piece .view-artwork .view-content .views-row h2, .foldout .foldout-toggle, .heading--medium, .copy h1, .info-panel .content h1, .info-panel--expandable .content h1, .page-search .search-panel .content h1, .info-panel > h2, .info-panel--expandable > h2, .page-search .search-panel > h2, .page-search .category, .heading--large, .button--l, .node-type-page #page-title, .heading--extra-large, .heading--bordered { font-family: "hill bold", sans-serif; font-size: 1em; font-weight: normal; line-height: 1.305; margin-bottom: .5em; color: #111111; letter-spacing: -.005em; }
 
-.heading--small, .copy h2, .info-panel .content h2, .info-panel--expandable .content h2, .page-search .search-panel .content h2, .delta-toggle-menu, .tile--large a, .front #content .menu li.tile--large a, .node-audio .node-teaser h2, .compact-list__item h2, .compact-list--search .compact-list__item h2, .page-search .view-content .compact-list__item h2, .node-type-generic-page .view-artworks .view-content .compact-list__item h2, .node-type-route .node-audio.view-mode-route_context h2, .node-type-route .node-audio.node-teaser h2, .page-search .view-content .views-row h2, .page-number-search .view-content .views-row h2, .node-type-generic-page .view-routes .view-content .views-row h2, .node-type-generic-page .view-artworks .view-content .views-row h2, .node-type-piece .view-artwork .view-content .views-row h2, .foldout .foldout-toggle { font-size: 1.2em; margin-bottom: .4em; }
+.heading--small, .copy h2, .info-panel .content h2, .info-panel--expandable .content h2, .page-search .search-panel .content h2, .delta-toggle-menu, .front .menu-tile.tile--large a, .node-audio .node-teaser h2, .compact-list__item h2, .compact-list--search .compact-list__item h2, .page-search .view-content .compact-list__item h2, .node-type-generic-page .view-artworks .view-content .compact-list__item h2, .node-type-route .node-audio.view-mode-route_context h2, .node-type-route .node-audio.node-teaser h2, .page-search .view-content .views-row h2, .page-number-search .view-content .views-row h2, .node-type-generic-page .view-routes .view-content .views-row h2, .node-type-generic-page .view-artworks .view-content .views-row h2, .node-type-piece .view-artwork .view-content .views-row h2, .foldout .foldout-toggle { font-size: 1.2em; margin-bottom: .4em; }
 
 .heading--medium, .copy h1, .info-panel .content h1, .info-panel--expandable .content h1, .page-search .search-panel .content h1, .info-panel > h2, .info-panel--expandable > h2, .page-search .search-panel > h2, .page-search .category { font-size: 1.35em; margin-bottom: .35em; }
 
@@ -308,21 +308,25 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 
 .delta-toggle-menu.open { display: block; position: absolute; top: 42px; width: 100%; padding-top: 20px; padding-bottom: 20px; margin-right: -12px; margin-left: -12px; background: #111111; color: #fff; -webkit-box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.35); -moz-box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.35); box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.35); }
 
-/* § Standard tile (small)
+/* § Standard tile.
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.tile, .tile--large, .front #content .menu li.tile--large, .front #content .menu li { width: 50%; float: left; overflow: hidden; text-align: center; position: relative; margin-bottom: 12px; }
-.tile:hover, .tile--large:hover, .front #content .menu li:hover, .tile:focus, .tile--large:focus, .front #content .menu li:focus { cursor: pointer; opacity: .85; }
-.tile img, .tile--large img, .front #content .menu li.tile--large img, .front #content .menu li img { width: 100%; }
-.tile a, .tile--large a, .front #content .menu li.tile--large a, .front #content .menu li a { font-family: 'hill regular', sans-serif; margin-bottom: 0; color: #fff; display: block; text-align: center; position: absolute; bottom: 0; background: #111111; padding: 10px 5px 12px; }
-.tile.tile--small:nth-child(odd), .tile--small.tile--large:nth-child(odd), .front #content .menu li.tile--small:nth-child(odd) { padding-left: 6px; }
-.tile.tile--small:nth-child(odd) a, .tile--small.tile--large:nth-child(odd) a, .front #content .menu li.tile--small:nth-child(odd) a { left: 6px; right: 0; }
-.tile.tile--small:nth-child(even), .tile--small.tile--large:nth-child(even), .front #content .menu li.tile--small:nth-child(even) { padding-right: 6px; }
-.tile.tile--small:nth-child(even) a, .tile--small.tile--large:nth-child(even) a, .front #content .menu li.tile--small:nth-child(even) a { right: 6px; left: 0; }
+.front .menu-tile { width: 50%; float: left; overflow: hidden; text-align: center; position: relative; margin-bottom: 12px; }
+.front .menu-tile:hover, .front .menu-tile:focus { cursor: pointer; opacity: .85; }
+.front .menu-tile img { width: 100%; }
+.front .menu-tile a span { font-family: 'hill regular', sans-serif; margin-bottom: 0; color: #fff; display: block; text-align: center; position: absolute; bottom: 0; right: 0; left: 0; background: #111111; padding: 10px 5px 12px; }
+
+/* § Small tile
+\*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.front .menu-tile.tile--small { padding: 0; }
+.front .menu-tile.tile--small:nth-child(odd) { padding-left: 6px; }
+.front .menu-tile.tile--small:nth-child(odd) a span { left: 6px; right: 0; color: magenta; }
+.front .menu-tile.tile--small:nth-child(even) { padding-right: 6px; }
+.front .menu-tile.tile--small:nth-child(even) a span { right: 6px; left: 0; }
 
 /* § Large tile
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.tile--large, .front #content .menu li.tile--large { padding: 0; width: 100% !important; height: auto; float: none; }
-.tile--large a, .front #content .menu li.tile--large a { padding: 12px 5px 13px; right: 0; left: 0; }
+.front .menu-tile.tile--large { padding: 0; width: 100% !important; height: auto; clear: both; }
+.front .menu-tile.tile--large a span { padding: 12px 5px 13px; right: 0; left: 0; }
 
 /* § Default
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -753,8 +757,8 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 .front .node-generic-page > h2 { display: none; }
 .front #content { padding: 12px; }
 .front #content .info-panel, .front #content .info-panel--expandable, .front #content .page-search .search-panel, .page-search .front #content .search-panel { display: none; }
-.front #content .menu { *zoom: 1; }
-.front #content .menu:after { content: ""; display: table; clear: both; }
+.front .menu-tile { *zoom: 1; }
+.front .menu-tile:after { content: ""; display: table; clear: both; }
 
 .node-audio .videos.open { padding-bottom: 1px; }
 .node-audio .videos .player { margin: 15px; }
