--- a/sites/all/themes/audible/sass/components/_foldout.scss
+++ b/sites/all/themes/audible/sass/components/_foldout.scss
@@ -3,6 +3,10 @@
   background: #fff;
   @include box-shadow( 0 -1px 4px 0 rgba(0, 0, 0, .22) );
 
+  &.videos {
+    display: none;
+  }
+
   // Title
   /*h2*/.foldout-toggle {
     @extend .heading--small;
@@ -10,6 +14,7 @@
     margin-bottom: 0;
     padding-top: 12px;
     border-bottom: 1px solid $gray-lighter;
+  @include user-select(none);
 
     &:hover,
     &:focus {
