--- a/sites/all/themes/audible/sass/components/_layout.scss
+++ b/sites/all/themes/audible/sass/components/_layout.scss
@@ -3,7 +3,7 @@
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 %page-width {
-  max-width: 800px;
+  max-width: $site-width;
   min-width: 100px;
   margin: 0 auto;
   
