--- a/sites/all/themes/audible/sass/_variables.scss
+++ b/sites/all/themes/audible/sass/_variables.scss
@@ -6,6 +6,7 @@ $header-height: 42px;
 /*
  § Screen sizes (used in media queries).
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+$site-width: 800px;
 $screen-xs:  300px;
 $screen-s:   600px;
 $screen-m:  1000px;
