--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -330,8 +330,8 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 
 /* § Default
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.info-panel, .info-panel--expandable, .page-search .search-panel { position: relative; background: #f2f2f4; padding: 18px 12px 10px; -webkit-box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); text-align: center; border-top: 1px solid rgba(0, 0, 0, 0.1); }
-.info-panel.open, .open.info-panel--expandable, .page-search .open.search-panel { text-align: left; }
+.info-panel, .info-panel--expandable, .page-search .search-panel { background: #f2f2f4; text-align: center; position: relative; cursor: pointer; padding: 18px 12px 10px; border-top: 1px solid rgba(0, 0, 0, 0.1); -webkit-box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); -moz-box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); box-shadow: inset 0 -1px 4px 0 rgba(0, 0, 0, 0.1); }
+.info-panel.open, .open.info-panel--expandable, .page-search .open.search-panel { cursor: default; text-align: left; }
 .info-panel .help-text, .info-panel--expandable .help-text, .page-search .search-panel .help-text { margin-top: -.4em; margin-bottom: .8em; }
 
 /* § Expandable
