--- a/sites/all/themes/audible/sass/components/_info-panel.scss
+++ b/sites/all/themes/audible/sass/components/_info-panel.scss
@@ -3,14 +3,16 @@
 \*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .info-panel {
   
-  position: relative;
   background: $gray-lighter;
-  padding: 18px 12px 10px;
-  @include box-shadow(inset 0 -1px 4px 0 rgba(0, 0, 0, .1) );
   text-align: center;
+  position: relative;
+  cursor: pointer;
+  padding: 18px 12px 10px;
   border-top: 1px solid rgba(0, 0, 0, .1);
+  @include box-shadow(inset 0 -1px 4px 0 rgba(0, 0, 0, .1) );
 
   &.open {
+    cursor: default;
     text-align: left;
   }
 
