--- a/sites/all/themes/audible/css/audible.css
+++ b/sites/all/themes/audible/css/audible.css
@@ -766,7 +766,7 @@ label[for="menu-toggle"].active:before { -webkit-transform: rotate(360deg); -moz
 .node-audio .videos.open { padding-bottom: 1px; }
 .node-audio .videos .player { margin: 15px; }
 
-.page-search .category { padding-top: 10px; padding-bottom: 5px; border-bottom: 1px solid #e6e6e8; margin-bottom: 0; }
+.page-search .category { padding: 10px 0 5px 12px; border-bottom: 1px solid #e6e6e8; margin-bottom: 0; }
 
 .page-number-search form { display: none; }
 
